--- a/code/build.gradle
+++ b/code/build.gradle
@@ -1,13 +1,38 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.10"
+
+    ext {
+        version_android_gradle_plugin = "4.0.1"
+        version_core = '1.3.2'
+        version_constraint_layout = "2.1.0-alpha2"
+        version_glide = "4.8.0"
+        version_kotlin = '1.4.31'
+        version_kotlin_serialization = "0.14.0"
+        version_kotlin_coroutines = "1.4.1"
+        version_lifecycle_extensions = '2.2.0'
+        version_moshi = "1.9.3"
+        version_navigation = "2.3.3"
+        version_retrofit = "2.9.0"
+        version_retrofit_coroutines_adapter = "0.9.2"
+        version_recyclerview = "1.2.0-alpha05"
+        version_glide = "4.11.0"
+        version_play_services_location = "18.0.0"
+        version_room = "2.2.6"
+        version_glide = "4.12.0"
+        kotlin_version = "1.4.31"
+        version_material = "1.3.0"
+        version_koin = "2.2.2"
+    }
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.android.tools.build:gradle:4.1.2"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$version_kotlin"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$version_kotlin"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
