--- a/code/build.gradle
+++ b/code/build.gradle
@@ -22,6 +22,15 @@ buildscript {
         kotlin_version = "1.4.31"
         version_material = "1.3.0"
         version_koin = "2.2.2"
+        version_androidx_test = "1.4.0-alpha04"
+        version_androidx_test_ext = "1.1.2"
+        version_androidx_test_rules = "1.4.0-alpha04"
+        espressoVersion = '3.3.0'
+        robolectricVersion = '4.4'
+        archTestingVersion = '2.1.0'
+        junitVersion = '4.13.2'
+        mockitoVersion = '2.23.4'
+        fragmentVersion = '1.3.0-beta01'
     }
 
     repositories {
