--- a/code/build.gradle
+++ b/code/build.gradle
@@ -31,6 +31,9 @@ buildscript {
         junitVersion = '4.13.2'
         mockitoVersion = '2.23.4'
         fragmentVersion = '1.3.0-beta01'
+        hamcrestVersion = '1.3'
+        archTestingVersion = '2.1.0'
+        truthVersion = '0.44'
     }
 
     repositories {
